--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -13,36 +13,65 @@
     {
       "cell_type": "code",
       "source": [
-        "gpa = float(input(\"Nhập điểm GPA (0 - 10): \"))\n",
+        "n = int(input(\"Nhập vào số nguyên dương n: \"))\n",
+        "total = 0\n",
+        "for i in range(2, n+1, 2):\n",
+        "    total += i\n",
+        "print(\"Tổng các số chẵn nhỏ hơn hoặc bằng\", n, \"là:\", total)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zrEBYkhhxRba",
+        "outputId": "e05c4241-d087-430c-bc38-2bbe26703874"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập vào số nguyên dương n: 10\n",
+            "Tổng các số chẵn nhỏ hơn hoặc bằng 10 là: 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "if gpa < 0 or gpa > 10:\n",
-        "    print(\"Điểm không hợp lệ!\")\n",
-        "elif gpa >= 8.5:\n",
-        "    print(\"Học lực: Xuất sắc\")\n",
-        "elif gpa >= 7.0:\n",
-        "    print(\"Học lực: Giỏi\")\n",
-        "elif gpa >= 5.5:\n",
-        "    print(\"Học lực: Khá\")\n",
-        "elif gpa >= 4.0:\n",
-        "    print(\"Học lực: Trung bình\")\n",
+        "s = input(\"Nhập chuỗi: \")\n",
+        "\n",
+        "words = s.split()\n",
+        "\n",
+        "num_words = len(words)\n",
+        "\n",
+        "if words:\n",
+        "    longest_word = max(words, key=len)\n",
         "else:\n",
-        "    print(\"Học lực: Yếu\")\n"
+        "    longest_word = \"\"\n",
+        "\n",
+        "print(\"Số từ trong chuỗi:\", num_words)\n",
+        "print(\"Từ dài nhất:\", longest_word)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "1YL2fnljksEw",
-        "outputId": "7b0e2ca0-5ef8-45f6-8926-e7b8d9b15ebb"
+        "id": "YCELZClfvfma",
+        "outputId": "af0aa7ec-3950-4179-ca62-9dd6ed2ebad6"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nhập điểm GPA (0 - 10): 6\n",
-            "Học lực: Khá\n"
+            "Nhập chuỗi: lap trinh python co ban Output\n",
+            "Số từ trong chuỗi: 6\n",
+            "Từ dài nhất: python\n"
           ]
         }
       ]
@@ -50,30 +79,39 @@
     {
       "cell_type": "code",
       "source": [
-        "n = int(input(\"Nhập số nguyên dương n: \"))\n",
-        "tong = 0\n",
         "\n",
-        "for i in range(1, n + 1):\n",
-        "    if i % 2 == 0:\n",
-        "        tong += i\n",
+        "nums = list(map(int, input(\"Nhập danh sách số nguyên: \").split()))\n",
         "\n",
-        "print(\"Tổng các số chẵn từ 1 đến\", n, \"là:\", tong)\n"
+        "unique_nums = []\n",
+        "for num in nums:\n",
+        "    if num not in unique_nums:\n",
+        "        unique_nums.append(num)\n",
+        "\n",
+        "unique_nums.sort()\n",
+        "\n",
+        "print(\"Sorted list:\", unique_nums)\n",
+        "\n",
+        "if len(unique_nums) >= 2:\n",
+        "    print(\"Second largest:\", unique_nums[-2])\n",
+        "else:\n",
+        "    print(\"Không có số lớn thứ hai\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XzgMTobslFdg",
-        "outputId": "6a266106-15b8-4974-e50a-65734a78a63b"
+        "id": "Wf-7xWWbvzWi",
+        "outputId": "61cb59e1-07e5-4c7f-b43d-6d38f1f55232"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nhập số nguyên dương n: 6\n",
-            "Tổng các số chẵn từ 1 đến 6 là: 12\n"
+            "Nhập danh sách số nguyên: 5 1 3 5 2 3\n",
+            "Sorted list: [1, 2, 3, 5]\n",
+            "Second largest: 3\n"
           ]
         }
       ]
@@ -81,37 +119,29 @@
     {
       "cell_type": "code",
       "source": [
-        "mat_khau_dung = \"python123\"\n",
-        "dem = 0\n",
-        "\n",
-        "while dem < 3:\n",
-        "    mat_khau = input(\"Nhập mật khẩu: \")\n",
-        "\n",
-        "    if mat_khau == mat_khau_dung:\n",
-        "        print(\"Đăng nhập thành công\")\n",
-        "        break\n",
-        "    else:\n",
-        "        dem += 1\n",
-        "        print(\"Mật khẩu sai!\")\n",
-        "\n",
-        "if dem == 3:\n",
-        "    print(\"Tài khoản bị khóa\")\n"
+        "scores = list(map(float, input().split()))\n",
+        "valid_scores = [s for s in scores if 0 <= s <= 10]\n",
+        "average = sum(valid_scores) / len(valid_scores) if valid_scores else 0\n",
+        "passed = sum(1 for s in valid_scores if s >= 5)\n",
+        "print(f\"Average: {average}\")\n",
+        "print(f\"Passed: {passed}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "S-xygozLlR6g",
-        "outputId": "f5e8b155-c3f8-4e0c-f3b7-ff4d1c9c1cd0"
+        "id": "wnUxQXoxwqla",
+        "outputId": "bba61dba-8efd-4afd-c49c-5a70171bc9fc"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nhập mật khẩu: python123\n",
-            "Đăng nhập thành công\n"
+            "7 8 11 -1 4 5\n",
+            "Average: 6.0\n",
+            "Passed: 3\n"
           ]
         }
       ]
@@ -120,6 +150,7 @@
   "metadata": {
     "colab": {
       "name": "Welcome To Colab",
+      "toc_visible": true,
       "provenance": [],
       "include_colab_link": true
     },
